--- a/Mijn deeltoets 1/index.html
+++ b/Mijn deeltoets 1/index.html
@@ -66,16 +66,16 @@
                     <th>L</th>
                     <th>Points won</th>
                     <th>Points lost</th>
-                    <th>+/-</th>
+                    <th>Score win</th>
         </tr>
         <tbody data-bind="rankings">
         <tr>
         	<td data-bind="team"></td>
         	<td data-bind="Win"></td>
         	<td data-bind="Lost"></td>
-        	<td data-bind="Sw"></td>
-        	<td data-bind="Sl"></td>
         	<td data-bind="Pw"></td>
+        	<td data-bind="Pl"></td>
+        	<td data-bind="Sw"></td>
         </tr>
         </tbody>
         </table>
