Post fix, update score fix

--- a/Leaguevine API quo js/index.html
+++ b/Leaguevine API quo js/index.html
@@ -6,104 +6,109 @@
     <title>Ultimate Frisbee Score App: Autumn 2013 Tournament</title>
     <link href="static/css/style.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
+<body id="body">
     <header>
         <h1>Ultimate Frisbee Score App: Autumn 2013 Tournament</h1>
         <nav>
             <ul>
                 <li><a href="#/schedule">Schedule</a></li>
-                <li><a href="#/game">Game</a></li>
-                <li><a href="#/ranking">Ranking</a></li>
+                <li><a href="#/Ranking">Ranking</a></li>
             </ul>
         </nav>
     </header>
 
-    <article id="content" class="col">
-        
-        <section data-route="schedule"> 
-                    <table>
-                        <tr>
-                            <th>Time</th>
-                            <th>Team 1 Name</th>
-                            <th>Team 1 Score</th>
-                            <th>Team 2 Name</th>
-                            <th>Team 2 Score</th>
-                            <th>Last Update</th>
-                            <th>Update Score</th>
-                        </tr>
-                        <tbody data-bind="objects">
-                            <tr>
-                                <td data-bind="time"></td>
-                                <td data-bind="team_1"><span data-bind="name"</span></td>
-                                <td data-bind="team_1_score"></td>
-                                <td data-bind="team_2"><span data-bind="name"</span></td>
-                                <td data-bind="team_2_score"></td>
-                                <td data-bind="time_last_updated"></td>
-                                <td><a href="#">Update Score</a></td>
-                            </tr>
-                        </tbody>
-                    </table>
-        </section>
-
+    <article id="content2" class="col">
         <section data-route="game">
-            <table>
-                <tr>
-                    <th>Game</th>
-                    <th>Team</th>
-                    <th>Result</th>
-                    <th>Team</th>
-                </tr>
-                <tbody data-bind="games">
-                    <tr>
-                        <td data-bind="score"></td>
-                        <td data-bind="team1"></td>
-                        <td><span data-bind="team1Score"></span> - <span data-bind="team2Score"></span></td>
-                        <td data-bind="team2"></td>
-                    </tr>
-                </tbody>
-            </table>
+                <h1 data-bind="title"></h1>
+                <table>
+                    <tbody>
+                        <tr>
+                            <th data-bind="team_1"><span data-bind= "name"></span></th>
+                            <th data-bind="team_2"><span data-bind= "name"></span></th>
+                            <th>Verzenden</th>
+                        </tr>
+                        <tr>
+                            <td> <input type="button" value="+" id="plus1" /><input type="button" value="-" id="min1" /></td>
+                            <td> <input type="button" value="+" id="plus2" /><input type="button" value="-" id="min2" /></td>
+                            <td id="finalScore"><a href="#/schedule">Final score</a></td>
+                        </tr>
+                        <tr data-bind="objects">
+                            <td id="addScore1" data-bind="team_1_score"></td>
+                            <td id="addScore2" data-bind="team_2_score"></td>
+                        </tr>
+                    </tbody>
+                </table>
         </section>
 
-        <section data-route="ranking">
-            <div data-bind="objects">
-                    <h1>Pool <span data-bind="name"></span></h1>
-                    <table>
+        <section data-route="schedule">
+<table>
+                    <thead>
                         <tr>
-                            <th>Team</th>
-                            <th>GP</th>
-                            <th>W</th>
-                            <th>L</th>
-                            <th>PS</th>
-                            <th>SA</th>
-                            <th>+/-</th>
+                            <th>Tijd</th>
+                            <th>Team 1</th>
+                            <th>Result</th>
+                            <th>Team 2</th>
+                            <th>Score update</th>
                         </tr>
-                        <tbody data-bind="standings">
-                            <tr>
-                                <td data-bind="team"><span data-bind="name"</span></td>
-                                <td data-bind="games_played"></td>
-                                <td data-bind="wins"></td>
-                                <td data-bind="losses"></td>
-                                <td data-bind="points_scored"></td>
-                                <td data-bind="points_allowed"></td>
-                                <td data-bind="plus_minus"></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </section>	
+                    </thead>
+                    <tbody data-bind="objects">
+                        <tr>
+                            <td data-bind="time"></td>
+                            <td data-bind="team_1"><span data-bind= "name"></span></td>
+                            <td><span data-bind="team_1_score"></span> - <span data-bind="team_2_score"></span></td>
+                            <td data-bind="team_2"><span data-bind= "name"></span></td>
+                            <td><button><a data-bind="track_score">update</a></button></td>
+                        </tr>
+                    </tbody>
+                </table>
+</table>
 
-    </article>
+</section>
 
-    <!-- Libs -->
-    <script src="static/js/lib/routie.min.js"></script>
-    <script src="static/js/lib/ready.min.js" type="text/javascript"></script>
-    <script src="static/js/lib/qwery.min.js" type="text/javascript"></script>
-    <script src="static/js/lib/transparancy.min.js" type="text/javascript"></script>
-    <script src="static/js/lib/quo.js" type="text/javascript"></script>
+<section data-route="Ranking">
+    <div data-bind="objects">
+        <h1>Pool <span data-bind="name"></span></h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Teamname</th>
+                    <th>Wins</th>
+                    <th>Losses</th>
+                    <th>Scored</th>
+                    <th>+/-</th>
+                </tr>
+            </thead>        
+            <tbody data-bind="standings">
+                <tr>
+                    <td data-bind="team"><span data-bind="name"></span></td>
+                    <td data-bind="wins"></td>
+                    <td data-bind="losses"></td>
+                    <td data-bind="points_scored"></td>
+                    <td data-bind="plus_minus"></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</section>
+</article>
 
-    <!-- Application -->
-    <script src="static/js/app.js"></script>
+<!-- Loader http://cssload.net/ -->
+<div class="bubblingG">
+    <span id="bubblingG_1"></span>
+    <span id="bubblingG_2"></span>
+    <span id="bubblingG_3"></span>
+</div>
+
+<!-- Libs -->
+<script src="static/js/lib/routie.min.js"></script>
+<script src="static/js/lib/ready.min.js" type="text/javascript"></script>
+<script src="static/js/lib/qwery.min.js" type="text/javascript"></script>
+<script src="static/js/lib/transparancy.min.js" type="text/javascript"></script>
+<script src="static/js/lib/quo.js" type="text/javascript"></script>
+<script src="static/js/lib/swipe.js" type="text/javascript"></script>
+
+<!-- Application -->
+<script src="static/js/app.js"></script>
 
 </body>
 </html>
