--- a/Leaguevine API quo js/index.html
+++ b/Leaguevine API quo js/index.html
@@ -41,6 +41,7 @@
         </section>
 
         <section data-route="schedule">
+            <section id="fade-in" class="box swipeLeft">
 <table>
                     <thead>
                         <tr>
@@ -61,11 +62,13 @@
                         </tr>
                     </tbody>
                 </table>
+            </section>
 </table>
 
 </section>
 
 <section data-route="Ranking">
+     <section id="fade-in" class="box swipeRight">
     <div data-bind="objects">
         <h1>Pool <span data-bind="name"></span></h1>
         <table>
@@ -90,6 +93,7 @@
         </table>
     </div>
 </section>
+</section>
 </article>
 
 <!-- Loader http://cssload.net/ -->
@@ -105,7 +109,6 @@
 <script src="static/js/lib/qwery.min.js" type="text/javascript"></script>
 <script src="static/js/lib/transparancy.min.js" type="text/javascript"></script>
 <script src="static/js/lib/quo.js" type="text/javascript"></script>
-<script src="static/js/lib/swipe.js" type="text/javascript"></script>
 
 <!-- Application -->
 <script src="static/js/app.js"></script>
